fix overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,6 @@
 html,
 body {
   scroll-behavior: smooth !important;
-  overflow: hidden;
 }
 
 body {
